# Laboratorium-SiMR

./: cube.py  cube_positioning.py  differentials.csv  eq_motion.tex  eq_motion_0.tex  eq_motion_1.tex  eq_motion_2.tex  eq_motion_3.tex  eq_motion_4.tex  eq_motion_5.tex  eq_motion_6.tex  lagrange_eqns.txt  lagrangian.tex  phase_plane.py  process_differentials.py  processed_differentials.csv  project_objectives.tex  results.csv  solution_Derivative(a(t), (t, 2)).txt  solution_Derivative(b(t), (t, 2)).txt  solution_Derivative(g(t), (t, 2)).txt  solution_Derivative(x(t), (t, 2)).txt  solution_Derivative(y(t), (t, 2)).txt  solution_Derivative(z(t), (t, 2)).txt
CAD/: 2DOF_SYSTEM.SLDASM  Backup of 2DOF_SYSTEM.SLDASM  Backup of CARRIAGE.SLDASM  CARRIAGE.SLDASM  MGN_BLOCK.SLDPRT
DEM/dem/: dem.kicad_prl  dem.kicad_pro  dem.kicad_sch  untitled.kicad_sch
LabGUI/: CMakeLists.txt
LabGUI/LabGUI/: CMakeLists.txt  interface.cpp  interface.h  main.cpp
LabGUI/LabGUI/scripts/: phase_plane.py
LabGUI/build-LabGUI-Desktop_Qt_6_7_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  .ninja_log.recompact  CMakeCache.txt  build.ninja  cmake_install.cmake
LabGUI/build-LabGUI-Desktop_Qt_6_7_1_MSVC2019_64bit-Debug/.cmake/api/v1/reply/: cache-v2-9015ac240f7f8bdde80d.json  cmakeFiles-v1-6d98b36c639be775177b.json  codemodel-v2-39cf9fd858c2e0c09a09.json  directory-.-Debug-34a4766810121ad19764.json  index-2024-05-26T16-41-17-0913.json  target-LabGUI-Debug-7b50aabb79437d7e1c8c.json  target-LabGUI_autogen-Debug-d8d0f957afa16f5a4216.json  target-LabGUI_autogen_timestamp_deps-Debug-e6140e017ebbf3d7b95e.json
LabGUI/build-LabGUI-Desktop_Qt_6_7_1_MSVC2019_64bit-Debug/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
LabGUI/build-LabGUI-Desktop_Qt_6_7_1_MSVC2019_64bit-Debug/LabGUI_autogen/: deps  mocs_compilation.cpp
LabGUI/build-LabGUI-Desktop_Qt_6_7_1_MSVC2019_64bit-Debug/LabGUI_autogen/EWIEGA46WW/: moc_interface.cpp  moc_interface.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
LabGUI/build-LabGUI-Desktop_Qt_6_7_1_MSVC2019_64bit-Debug/LabGUI_autogen/include/: mainwindow.moc.d
LabGUI/build-LabGUI-Desktop_Qt_6_7_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
LabGUI/build-LabGUI-Desktop_Qt_6_7_1_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-1a55c1aeee98ae4c389f.json  cmakeFiles-v1-bc44fb7c10fd80d6d1cd.json  codemodel-v2-adc976c5c5fdc1144382.json  directory-.-Debug-a2430d41cc3f43644b9c.json  index-2024-05-23T08-16-29-0494.json  target-LabGUI-Debug-bcb1d21c1cab86c6c3be.json  target-LabGUI_autogen-Debug-4f44f1810676c4a40cc9.json  target-LabGUI_autogen_timestamp_deps-Debug-0e8f7257eae5f1c07f9b.json
LabGUI/build-LabGUI-Desktop_Qt_6_7_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
LabGUI/build-LabGUI-Desktop_Qt_6_7_1_MinGW_64_bit-Debug/LabGUI_autogen/: deps
LabGUI/build-LabGUI-Desktop_Qt_6_7_1_MinGW_64_bit-Debug/LabGUI_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
LabGUI/res/: WSiMR.xcf
LabGUI/src/: baseinterfacewidget.cpp  baseinterfacewidget.h  calculationworker.h  glplotwidget.cpp  glplotwidget.h  interface.cpp  interface.h  main.cpp  mainmenu.cpp  mainmenu.h  mainwindow.cpp  mainwindow.h  submenu.cpp  submenu.h
LaboratoriumSiMR/: CMakeLists.txt  main.cpp
PKM_LAB/: MODERNIZACJA_ZBIORNIK_PKM_KLISIEWICZ.aux  MODERNIZACJA_ZBIORNIK_PKM_KLISIEWICZ.out  MODERNIZACJA_ZBIORNIK_PKM_KLISIEWICZ.tex  mybib.bib
PKM_LAB/pressure_container/pressure_container/: mux.kicad_sch  pressure_container.kicad_prl  pressure_container.kicad_pro  pressure_container.kicad_sch
build-LabGUI-Desktop_x86_windows_msvc2022_pe_64bit-Debug/: CMakeCache.txt  qtcsettings.cmake
build-LaboratoriumSiMR-Desktop_x86_windows_msvc2022_pe_64bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-LaboratoriumSiMR-Desktop_x86_windows_msvc2022_pe_64bit-Debug/.qt/: QtDeploySupport.cmake
build-LaboratoriumSiMR-Desktop_x86_windows_msvc2022_pe_64bit-Debug/.qtc_clangd/: compile_commands.json
build-test-Desktop_Qt_6_7_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake  test.ilk
build-test-Desktop_Qt_6_7_1_MSVC2019_64bit-Debug/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-test-Desktop_Qt_6_7_1_MSVC2019_64bit-Debug/test_autogen/: deps
build-test-Desktop_Qt_6_7_1_MSVC2019_64bit-Debug/test_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-test-Desktop_x86_windows_msvc2022_pe_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake  test.ilk
build-test-Desktop_x86_windows_msvc2022_pe_64bit-Debug/.qt/: QtDeploySupport.cmake
build-test-Desktop_x86_windows_msvc2022_pe_64bit-Debug/test_autogen/: deps
build-test-Desktop_x86_windows_msvc2022_pe_64bit-Debug/test_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
tex/: phase_space.tex
(+23 files in other folders)
